fix Java 8 compatibility